--- a/shop-web-app/wwwroot/css/site.css
+++ b/shop-web-app/wwwroot/css/site.css
@@ -31,6 +31,23 @@ body {
     margin: 0;
 }
 
+.img-thumbnail {
+    padding: 0.25rem;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    max-width: 100%;
+    height: auto;
+}
+
+.img-thumbnail:active {
+    border: 2px solid #2986e3;
+}
+
+.img-thumbnail.selected {
+    border: 2px solid #2986e3;
+}
+
 .img-container {
     width: 156px; /* Ustal szerokoœæ */
     height: 170px; /* Ustal wysokoœæ, aby uzyskaæ proporcje 1:1 */
