--- a/shop-web-app/wwwroot/css/site.css
+++ b/shop-web-app/wwwroot/css/site.css
@@ -18,6 +18,16 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+.btn-close {
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    background: none; 
+    border: none; 
+    font-size: 20px;
+    cursor: pointer; 
+}
+
 html {
   position: relative;
   min-height: 100%;
