--- a/shop-web-app/wwwroot/css/site.css
+++ b/shop-web-app/wwwroot/css/site.css
@@ -70,6 +70,18 @@ body {
     object-fit: cover;
 }
 
+.img-container-cart {
+    width: 170px; /* Ustal szerokoœæ */
+    height: 210px; /* Ustal wysokoœæ, aby uzyskaæ proporcje 1:1 */
+    overflow: hidden; /* Ukrywa nadmiar */
+}
+
+.img-container-cart img {
+    width: 100%;
+    height: 100%; /* Wymusza wysokoœæ dopasowan¹ do kontenera */
+    object-fit: cover;
+}
+
 main {
     flex: 1;
 }
