--- a/shop-web-app/Views/Home/Index.cshtml
+++ b/shop-web-app/Views/Home/Index.cshtml
@@ -1,19 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Moda dla każdego";
 }
-<style>
-    #background{ 
-        background: url(https://shopphotos.blob.core.windows.net/staticimages/tlo.png);
-        background-repeat: no-repeat;
-        background-size: auto;
-    }
-    
-</style>
+
 <body>
     
     <main>
-        <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-            <div class="carousel-indicators">
+        @* <div id="myCarousel" class="carousel carousel-dark slide mb-6" data-bs-ride="carousel">
+            <div class="carousel-indicators ">
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -23,9 +16,8 @@
                     <svg class="img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="white" /></svg>
                     <div class="container">
                         <div class="carousel-caption text-start text-dark">
-                            <h1>Example headline.</h1>
-                            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                            <p class="opacity-75">Uzyskaj dostęp do naszej oferty już teraz!</p>
+                            <p><a class="btn btn-lg btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Załóż konto</a></p>
                         </div>
                     </div>
                 </div>
@@ -33,7 +25,6 @@
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="white" /></svg>
                     <div class="container">
                         <div class="carousel-caption text-dark">
-                            <h1>Another example headline.</h1>
                             <p>Some representative placeholder content for the second slide of the carousel.</p>
                             <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                         </div>
@@ -43,7 +34,6 @@
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="white" /></svg>
                     <div class="container">
                         <div class="carousel-caption text-end text-dark">
-                            <h1>One more for good measure.</h1>
                             <p>Some representative placeholder content for the third slide of this carousel.</p>
                             <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
                         </div>
@@ -58,16 +48,16 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-        </div>
+        </div> *@
 
 
-        <section class="py-5 text-center bg-image position-relative" style="background-image: url('https://shopphotos.blob.core.windows.net/staticimages/tlo3.png'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100vw; margin-top: -20px; margin-left: calc(50% - 50vw); min-height: 600px;">
+        <section class="py-5 text-center bg-image position-relative" style="background-image: url('https://images.pexels.com/photos/1549200/pexels-photo-1549200.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100vw; margin-top: -20px; margin-left: calc(50% - 50vw); min-height: 900px;">
             <div class="overlay"></div>
 
             <div class="col-md-5 p-lg-5 mx-auto my-5">
-                <h1 class="display-4 fw-normal">Zanurz się w świecie mody</h1>
-                <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-                <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+                <h1 class="text-dark display-4 fw-normal" style="padding-top: 150px;">Zanurz się w świecie mody</h1>
+                <p class="lead fw-normal">Zobacz naszą ofertę - dokładnie to samo co rok oraz dwa lata temu i to pomimo okrojonego budżetu!</p>
+                <a class="btn btn-dark btn-lg" asp-area="" asp-controller="Product" asp-action="Index">Zobacz katalog</a>
             </div>
         </section>
 
@@ -84,11 +74,11 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-                    <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">Dopasowujemy się pod wasze wymagania</h2>
+                    <p class="lead">Niewolniczą pracą biednych ludzi w Azji jesteśmy w stanie wam zapewnić to co kochacie po i tak wysokich cenach.</p>
                 </div>
                 <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/d4/9a/d49a3027b2c6247ca96bb30bf60c7a7d4dbb87c2.jpg?imwidth=657" >
                 </div>
             </div>
 
@@ -96,11 +86,11 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-                    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">Zimowa elegancja</h2>
+                    <p class="lead">Odśwież codzienną garderobę perełkami z naszej kolekcji. Teraz znajdziesz w jednym miejscu wszystko, co najmodniejsze – od codziennej bazy, takiej jak spódnice i topy damskie, po dzianiny i odzież domową. </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/02/10/02108a055ef799bd96055b5de173003214fe481d.jpg?imwidth=657">
                 </div>
             </div>
 
@@ -108,19 +98,16 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-                    <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">Moda dla każdego - również dla Ciebie!</h2>
+                    <p class="lead">Planujesz jakieś wyjście? Koniecznie zobacz sukienki damskie: mamy fasony mini, midi i maxi na letnie wieczory, a także stylowe dżinsy i spodnie, które świetnie leżą na każdej sylwetce.</p>
                 </div>
                 <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/69/e4/69e405e7dfb0b2960dc0661f9bf004561d7ec0b4.jpg?imwidth=657">
                 </div>
             </div>
-
-            <hr class="featurette-divider">
 
             <!-- /END THE FEATURETTES -->
 
         </div><!-- /.container -->
-    </body>
-</main>
-</html>
+    </main>
+</body>
