--- a/shop-web-app/Views/Shared/_Layout.cshtml
+++ b/shop-web-app/Views/Shared/_Layout.cshtml
@@ -26,14 +26,6 @@
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Product" asp-action="Index" class="nav-link">Produkty</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
                 </ul>
                 <div class="navbar-collapse collapse w-200 order-3 dual-collapse2">
                     <ul class="navbar-nav ms-auto">
@@ -80,6 +72,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/CreateHelper.js"></script>
     <script src="~/js/ProductDetailsHelper.js"></script>
+    <script src="~/js/CreateOrderHelper.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
