--- a/shop-web-app/Views/Dashboard/Index.cshtml
+++ b/shop-web-app/Views/Dashboard/Index.cshtml
@@ -75,7 +75,7 @@
                                             else
                                             {
                                                 <div class="col">
-                                                    <p><span class="text-muted">Rozmiar:</span> @orderItem.ShoeSize.Value</p>
+                                                    <p><span class="text-muted">Rozmiar:</span> @orderItem.ShoeSize.Value.ToFriendlyString()</p>
                                                 </div>
                                             }
                                             <div class="col">
