--- a/shop-web-app/Views/Order/Create.cshtml
+++ b/shop-web-app/Views/Order/Create.cshtml
@@ -135,7 +135,7 @@
 
                         <div class="col-12">
                             <div class="form-check">
-                                <input asp-for="SaveAddress" class="form-check-input" />
+                                <input asp-for="SaveAddress" class="form-check-input" checked />
                                 <label asp-for="SaveAddress" class="form-check-label">Użyj tego adresu przy następnych zamówieniach</label>
                             </div>
                         </div>
