--- a/shop-web-app/Views/Product/Details.cshtml
+++ b/shop-web-app/Views/Product/Details.cshtml
@@ -14,9 +14,38 @@
                 @{
                     ProductVariant defaultVariant = Model.ProductVariants.ElementAtOrDefault(0);
                 }
-                <div class="col-lg-7 mb-4 mb-sm-0">
-                    <img alt="Image" id="mainImage" src="@defaultVariant.Photos.First().PhotoUrl" class="rounded img-fluid" />
+                <div id="carouselExampleControls" class="col-lg-7 mb-4 mb-sm-0 carousel slide carousel-dark" data-bs-ride="carousel">
+                    <div id="carouselContent" class="carousel-inner">
+                        @{
+                            int j = 0;
+                        }
+                        @foreach (Photo photo in defaultVariant.Photos)
+                        {
+                            if (j == 0)
+                            {
+                                <div class="carousel-item active">
+                                    <img alt="Image" id="mainImage" src="@photo.PhotoUrl" class="rounded img-fluid" style="width: 100%;" />
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="carousel-item">
+                                    <img alt="Image" id="mainImage" src="@photo.PhotoUrl" class="rounded img-fluid" style="width: 100%;"  />
+                                </div>
+                            }
+                            j++;
+                        }
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </button>
                 </div>
+
                 <!--end of col-->
                 <div class="col-lg-5 d-flex flex-column justify-content-between mr-auto ml-auto">
                     <div class="mb-3">
@@ -96,11 +125,11 @@
                                     {
                                         if (sq.Quantity > 0)
                                         {
-                                            <option value="@sq.Size">@sq.Size</option>
+                                            <option value="@sq.Size">@sq.Size.ToFriendlyString()</option>
                                         }
                                         else
                                         {
-                                            <option disabled class="text-muted" value="@sq.Size">@sq.Size (niedostępne)</option>
+                                            <option disabled class="text-muted" value="@sq.Size">@sq.Size.ToFriendlyString() (niedostępne)</option>
                                         }
                                     }
                                 </select>
